page for payments [2]

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5861,18 +5861,6 @@ button.close {
     display: none; }
   .header .ds-logo-mobile {
     display: none; }
-  .header .user-authorized .user-authorized-true {
-    display: block; }
-  .header .user-authorized .user-authorized-false {
-    display: none; }
-  .header .user-unAuthorized .user-authorized-true {
-    display: none; }
-  .header .user-unAuthorized .user-authorized-false {
-    display: block; }
-  .header .user-unAuthorized .user-mobile .user-authorized-true {
-    display: none; }
-  .header .user-unAuthorized .user-mobile .user-authorized-false {
-    display: block; }
   .header #header-search-collapse {
     padding: 0; }
   @media (max-width: 1200px) {
@@ -5881,57 +5869,13 @@ button.close {
       -ms-flex-preferred-size: 50px;
           flex-basis: 50px; }
     .header .user-mobile {
-      display: block; }
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
     .header .navbar-header {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex; }
-    .header .user-mobile {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      width: calc(100% - 100px);
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
-      -webkit-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between; }
-      .header .user-mobile .user-authorized-true {
-        list-style: none;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-        width: 100%;
-        -webkit-box-pack: end;
-            -ms-flex-pack: end;
-                justify-content: flex-end; }
-        .header .user-mobile .user-authorized-true > li {
-          margin-left: 15px;
-          display: -webkit-box;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-align: center;
-              -ms-flex-align: center;
-                  align-items: center; }
-          .header .user-mobile .user-authorized-true > li > a {
-            height: 100%;
-            color: #fff;
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-align: center;
-                -ms-flex-align: center;
-                    align-items: center; }
-            .header .user-mobile .user-authorized-true > li > a:hover, .header .user-mobile .user-authorized-true > li > a:active, .header .user-mobile .user-authorized-true > li > a:focus {
-              text-decoration: none;
-              color: #fff; }
-          .header .user-mobile .user-authorized-true > li .dropdown-menu {
-            background: #161616;
-            border-radius: 0; }
     .header .navbar-brand {
       display: none; }
     .header #header-navbar-collapse .header__user {
@@ -6557,7 +6501,8 @@ button.close {
 
 #casino-banner .tiger-reg .tiger-reg-form {
   background-color: rgba(76, 133, 161, 0.7);
-  padding: 15px; }
+  padding: 15px;
+  width: 100%; }
 
 .registration.tiger-reg .registration-bonus {
   position: relative;
@@ -6569,21 +6514,7 @@ button.close {
   background-color: rgba(76, 133, 161, 0.7);
   padding: 15px; }
 
-@media (max-width: 1400px) {
-  #casino-banner.carousel .carousel-inner > .item > img {
-    height: 500px;
-    width: auto;
-    max-width: none;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-    position: relative;
-    left: 50%; } }
-
 @media (max-width: 1200px) {
-  .carousel-control {
-    display: none; }
-  .carousel-indicators {
-    bottom: 0; }
   #casino-banner.carousel .carousel-inner > .item.pirate-reg > img {
     width: auto;
     max-width: none; }
@@ -6600,10 +6531,7 @@ button.close {
   .slide__text {
     left: 40%; }
   .registration-bonus {
-    font-size: 12px; }
-  #casino-banner.carousel .carousel-inner > .item.pirate-reg > img {
-    position: relative;
-    right: 28%; } }
+    font-size: 12px; } }
 
 @media (max-width: 768px) {
   .slide__text {
@@ -6613,21 +6541,10 @@ button.close {
   .slide__header {
     font-size: 3em;
     margin: 10px 0; }
-  #casino-banner.carousel .carousel-inner > .item > img {
-    height: 300px;
-    width: auto;
-    max-width: none;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-    position: relative;
-    left: 50%; }
   #casino-banner.carousel .carousel-inner > .item.pirate-reg .slide-bonus__first-line {
     font-size: 7em; }
   #casino-banner.carousel .carousel-inner > .item.pirate-reg .slide-bonus__second-line {
     font-size: 1.5em; }
-  #casino-banner.carousel .carousel-inner > .item.tiger-reg .registration-bonus {
-    padding: 30px;
-    width: 100%; }
   #casino-banner.carousel .carousel-inner > .item.tiger-reg .registration-bonus__count {
     font-size: 4em;
     margin-bottom: 10px; }
@@ -6638,19 +6555,40 @@ button.close {
     width: 55%;
     right: -20%; }
   #casino-banner.carousel .container {
-    width: 100%; }
-    #casino-banner.carousel .container .btn-mobile-reg {
-      margin: 15px 0 30px; } }
+    width: 100%; } }
 
 @media (max-width: 560px) {
-  .tiger-reg .registration-bonus__header, .tiger-reg .registration-bonus__underheader {
-    margin: 10px 0; }
-  .tiger-reg .registration-bonus .registration-bonus-pers {
-    top: 60px; } }
+  .tiger-reg .registration-bonus {
+    font-size: 8px; }
+    .tiger-reg .registration-bonus__header {
+      font-size: 1.4em; }
+    .tiger-reg .registration-bonus__header, .tiger-reg .registration-bonus__underheader {
+      margin: 10px 0; }
+    .tiger-reg .registration-bonus .registration-bonus-pers {
+      top: 60px; }
+  .slide__button-wrapper {
+    bottom: 20px; }
+  .carousel-caption .btn {
+    padding: 0 10px;
+    font-size: 12px; }
+  #casino-banner.carousel .carousel-inner > .item {
+    height: 30vh; }
+  #casino-banner.carousel .carousel-inner > .item.pirate-reg .slide-bonus__first-line {
+    font-size: 4em; } }
 
 @media (max-width: 480px) {
   .slide .slide__text {
-    left: 30%; }
+    left: 45%;
+    width: 200px;
+    font-size: 8px; }
+  .slide-bonus__third-line {
+    display: block;
+    margin: 10px 0; }
+  .slide-bonus .btn {
+    width: auto;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px; }
   .tiger-reg .col-xs-10 {
     width: 100%; }
   .tiger-reg .registration-bonus {
@@ -6659,6 +6597,12 @@ button.close {
       display: none; }
     .tiger-reg .registration-bonus .registration-bonus-content {
       max-width: 100%; } }
+
+@media (max-width: 350px) {
+  .slide .slide__text {
+    width: 150px; }
+    .slide .slide__text .btn {
+      padding: 0 10px; } }
 
 .tabs {
   position: relative; }
@@ -8227,6 +8171,9 @@ button.close {
     .prize__button:hover {
       background-color: #de3137; }
 
+[id$="form-reg"] {
+  width: 100%; }
+
 .form-reg {
   font-family: SFUIRegular; }
   .form-reg__socials {
@@ -8236,6 +8183,7 @@ button.close {
     display: inline-block;
     position: relative;
     padding-left: 20px;
+    text-align: left;
     font-size: 13px;
     line-height: 20px;
     width: 100%;
@@ -8282,6 +8230,11 @@ button.close {
       border-right: 1px solid #f38084;
       -webkit-transform: rotate(135deg);
               transform: rotate(135deg); }
+  @media (max-height: 800px) {
+    .form-reg .form-group {
+      margin-bottom: 10px; }
+    .form-reg .form-control {
+      padding: 10px; } }
 
 .modal-content {
   background: transparent;
@@ -9261,6 +9214,7 @@ button.close {
     padding-bottom: 40px;
     padding-left: 140px;
     background-image: url("../../img/coins-in-bag.png");
+    background-size: contain;
     background-position: left center; }
     .cashback__text-wrapper::before {
       content: '';
