--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6391,6 +6391,26 @@ button.close {
     width: 100%;
     height: 100%; }
 
+#casino-banner .item:first-child {
+  background: url("../../img/slider-images/slide-lord.png") 50% no-repeat;
+  background-size: cover; }
+
+#casino-banner .item:nth-child(2) {
+  background: url("../../img/slider-images/slide-viking.png") 50% no-repeat;
+  background-size: cover; }
+
+#casino-banner .item:nth-child(3) {
+  background: url("../../img/slider-images/day-slot.jpg") 50% no-repeat;
+  background-size: cover; }
+
+#casino-banner .item:nth-child(4) {
+  background: url("../../img/slider-images/slide-wood.png") 50% no-repeat;
+  background-size: cover; }
+
+#casino-banner .item:nth-child(5) {
+  background: url("../../img/slider-images/free-spins.png") 50% no-repeat;
+  background-size: cover; }
+
 .slide-bonus {
   text-align: center; }
   .slide-bonus > span {
@@ -6556,6 +6576,10 @@ button.close {
     right: -20%; }
   #casino-banner.carousel .container {
     width: 100%; } }
+
+@media (orientation: portrait) and (max-height: 1024px) {
+  #casino-banner.carousel .carousel-inner > .item {
+    height: 30vh; } }
 
 @media (max-width: 560px) {
   .tiger-reg .registration-bonus {
